--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,3 @@
 {
-    "extends": [
-        "plugin:prettier/recommended",
-        "react-app"
-    ]
+  "extends": ["plugin:prettier/recommended", "react-app"]
 }
